fix: long text overflowing

--- a/bitespeed/src/assets/styles/CustomNode.css
+++ b/bitespeed/src/assets/styles/CustomNode.css
@@ -34,6 +34,7 @@
 .custom-node__text {
     padding: 6px;
     font-size: 14px;
+    word-break: break-all;
 }
 
 .custom-node__whatsapp-icon >svg {
